--- a/Website/partials/footer.html
+++ b/Website/partials/footer.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="footer-bottom">
-               <p>&copy; 2025 Savanna Circuit Technologies. All rights reserved. |<a href="https://techvannah.com" target="_blank"> <span class="footer-bottom-text">Created by TechVannah</a></p>
+               <p>&copy; 2025 Savanna Circuit Technologies. All rights reserved. </p>
 
             </div>
         </div>
