--- a/Website/partials/footer.html
+++ b/Website/partials/footer.html
@@ -6,7 +6,7 @@
                 <h4>Savanna Circuit</h4>
                 <p>Empowering farmers through technology and innovation</p>
             </div>-->
-            <link href="fonts.googleapis.com" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
 
             <div class="footer-section">
                 <h4>Quick Links</h4>
