--- a/app/website/templates/website/partials/_header.html
+++ b/app/website/templates/website/partials/_header.html
@@ -14,7 +14,7 @@
             <li><a href="{{ url_for('website.contact') }}" class="nav-link {{ 'active' if request.endpoint == 'website.contact' }}">Contact</a></li>
         </ul>
         
-<a href="{{ url_for('store.index') }}" class="cta-button primary">Go to Store</a>
+<a href="{{ url_for('store.index') }}" class="cta-button primary">Buy Now</a>
         
         <div class="hamburger" id="hamburger">
             <span></span>
