--- a/partials/footer.html
+++ b/partials/footer.html
@@ -27,7 +27,6 @@
                     <li><a href="https://sav-circuit.com/privacy-policy/">Privacy Policy</a></li>
                     <li><a href="https://sav-circuit.com/terms-of-operations/">Terms of Service</a></li>
                     <li><a href="product quality policy">Product Policy</a></li>
-                    </li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -47,6 +46,15 @@
                     </a>
                     <a href="https://api.whatsapp.com/send/?phone=+254714574007&text=Hello,%20From%20SCT%20Website." aria-label="WhatsApp" class="social-whatsapp" target="_blank" rel="noopener">
                         <svg viewBox="0 0 24 24" height="1em" width="1em" aria-hidden="true"><path d="M20.5 3.5A10.5 10.5 0 0 0 3.8 17.9L2 22l4.3-1.7A10.5 10.5 0 1 0 20.5 3.5Zm-8.4 16.6c-1.8 0-3.5-.6-4.9-1.7l-.3-.2-2.9 1.1 1.1-2.8-.2-.3a8.5 8.5 0 1 1 7.2 4.9Zm4.9-6.3c-.3-.2-1.8-.9-2.1-1-.3-.1-.5-.2-.7.2-.2.3-.8 1-.9 1.1-.2.2-.3.2-.6.1-1.8-.9-3-1.6-4.2-3.6-.3-.4 0-.5.2-.7.2-.2.3-.3.4-.5.2-.2.1-.4 0-.6-.1-.2-.7-1.6-.9-2.2-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 3s1.2 3.5 1.3 3.7c.2.2 2.3 3.6 5.7 5 2.1.9 2.9 1 3.9.8.6-.1 1.8-.7 2-1.4.2-.7.2-1.3.2-1.4 0-.1-.1-.2-.3-.3Z"/></svg>
+                    </a>
+                </div>
+                    <h4 class="certified-by-title">Certified By</h4>
+                <div class="certifications">
+                    <a href="https://www.kebs.org/" target="_blank" rel="noopener">
+                        <img src="../images/kebs-seeklogo.png" alt="KEBS Certified">
+                    </a>
+                    <a href="https://www.goodmarket.global/" target="_blank" rel="noopener">
+                        <img src="../images/good-market-approved-logo-new.png" alt="Good Market Certified">
                     </a>
                 </div>
             </div>
