Update pop ups for  store-header.html

--- a/partials/store-header.html
+++ b/partials/store-header.html
@@ -32,13 +32,13 @@
 <!-- Floating Pop-ups -->
 <div class="floating-popup whatsapp-popup" id="whatsappPopup">
     <a href="https://api.whatsapp.com/send/?phone=+254714574007&text=Hello,%20From%20SCT%20Website." target="_blank" rel="noopener" title="Chat on WhatsApp" aria-label="WhatsApp" class="social-whatsapp popup-link">
-        <svg class="popup-svg" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" aria-hidden="true"><path d="M20.5 3.5A10.5 10.5 0 0 0 3.8 17.9L2 22l4.3-1.7A10.5 10.5 0 1 0 20.5 3.5Zm-8.4 16.6c-1.8 0-3.5-.6-4.9-1.7l-.3-.2-2.9 1.1 1.1-2.8-.2-.3a8.5 8.5 0 1 1 7.2 4.9Zm4.9-6.3c-.3-.2-1.8-.9-2.1-1-.3-.1-.5-.2-.7.2-.2.3-.8 1-.9 1.1-.2.2-.3.2-.6.1-1.8-.9-3-1.6-4.2-3.6-.3-.4 0-.5.2-.7s .2 .4 .4 .5 .4 .5 .4 .5 .4 .5 .4 .5 .4 .5 .4 .5z"/></svg>
+        <svg class="popup-svg" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" aria-hidden="true"><path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0 0 12.04 2m.01 16.61c-1.48 0-2.93-.4-4.21-1.15l-.3-.18-3.12.82.83-3.04-.19-.31a8.19 8.19 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.24-8.24 2.2 0 4.27.86 5.82 2.42a8.183 8.183 0 0 1 2.41 5.83c.02 4.54-3.68 8.23-8.22 8.23m4.53-6.18c-.25-.12-1.47-.72-1.69-.81-.23-.08-.39-.12-.56.12-.17.25-.64.81-.78.97-.14.17-.29.19-.54.06-.25-.12-1.05-.39-1.99-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.38.11-.51.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31-.22.25-.86.85-.86 2.07 0 1.22.89 2.4 1.01 2.56.12.17 1.75 2.67 4.23 3.74.59.26 1.05.41 1.41.52.59.19 1.13.16 1.56.1.48-.07 1.47-.6 1.67-1.18.21-.58.21-1.07.14-1.18s-.27-.16-.51-.28"/></svg>
     </a>
 </div>
 
 <div class="floating-popup call-popup" id="callPopup">
-    <a href="tel:+254714574007" title="Call Us" class="popup-link" aria-label="Call Us">
-        <svg class="popup-svg" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" aria-hidden="true"><path d="M22 16.92v3a2.99 2.99 0 0 1-3.29 3 19.86 19.86 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.86 19.86 0 0 1 2.08 4.29 2.99 2.99 0 0 1 5 1h3a3 3 0 0 1 3 2.72c.13 1.21.37 2.39.7 3.5a3 3 0 0 1-.45 3.11L10.1 11a16 16 0 0 0 6 6l1.67-1.67a3 3 0 0 1 3.11-.45c1.11.33 2.29.57 3.5.7a3 3 0 0 1 2.72 3z"/></svg>
+    <a href="tel:+254714574007" title="Call Us" class="popup-link">
+        <svg class="popup-svg" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" aria-hidden="true"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 0 0-1.01.24l-1.57 1.97c-2.83-1.49-5.15-3.8-6.62-6.62l1.97-1.57c.23-.23.33-.55.24-1.01a10.6 10.6 0 0 1-.56-3.53c0-.55-.45-1-1-1H4.39c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1z"/></svg>
     </a>
 </div>
 
