--- a/partials/footer.html
+++ b/partials/footer.html
@@ -51,10 +51,10 @@
                     <h4 class="certified-by-title">Certified By</h4>
                 <div class="certifications">
                     <a href="https://www.kebs.org/" target="_blank" rel="noopener">
-                        <img src="../images/kebs-seeklogo.png" alt="KEBS Certified">
+                        <img src="../images/kebs-seeklogo.webp" alt="KEBS Certified">
                     </a>
                     <a href="https://www.goodmarket.global/" target="_blank" rel="noopener">
-                        <img src="../images/good-market-approved-logo-new.png" alt="Good Market Certified">
+                        <img src="../images/good-market-approved-logo-new.webp" alt="Good Market Certified">
                     </a>
                 </div>
             </div>
