--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -19,6 +19,18 @@ body {
     padding-top: 70px; 
 }
 
+/* SEO & Accessibility Utility */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 /* Navigation Bar */
 .navbar {
     background-color:  rgba(248, 249, 250, 0.9);
