deletd some images and  re-checked the image paths

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,7 @@ body {
     color: #333;
     background-color: #f8f9fa;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* Navigation Bar */
