Changed solar cooling system images and updated product page links and metadata. added policies and speak-up portal pages. added bulk buy option and  store options for sales inquiries. changed partner logos and team images. added mission and vision statements to about page.

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -22,11 +22,20 @@
             <div class="footer-section">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="about.html#partners">Partners</a></li>
-                    <li><a href="https://sav-circuit.com/privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="https://sav-circuit.com/terms-of-operations/">Terms of Service</a></li>
-                    <li><a href="product quality policy">Product Policy</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/about.html#partners">Partners</a></li>
+                    <li><a href="#" id="footer-bulk-buy">Bulk Buy</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Governance</h4>
+                <ul>
+                    <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="/terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="/product-policy.html">Product Policy</a></li>
+                    <li><a href="/ehs-policy.html">Environmental, Health & Safety Policy</a></li>
+                    <li><a href="/speak-up-portal.html">Speak Up Portal</a></li>
+                    
                 </ul>
             </div>
             <div class="footer-section">
@@ -72,8 +81,8 @@
                 <ul class="contact-list">
                     <li>Tel: <a href="tel:0208000265">020 800 0265</a></li>
                     <li>Mobile: <a href="tel:+254798710210">+254 798 710 210</a></li>
-                    <li>Email: <a href="mailto:info@sav-circuit.com">info@sav-circuit.com</a></li>
-                
+                    <li>General Email: <a href="mailto:info@sav-circuit.com">info@sav-circuit.com</a></li>
+                    <li>partners Email: <a href="mailto:partnerships.sct@sav.com">partnerships.sct@sav.com</a></li> 
                 </ul>
             </div>
 
